Bug 1696967: Only snapshot before unlocking canvas texture when caching a data surface. r=jrmuizel

Doing this every frame causes issues for older GPUs with the extra bitmap
creation, copy and destruction. Instead the TextureRecorded now only takes a
snapshot when it is going to cache a data surface to improve getting data back
at the start of a frame.

Differential Revision: https://phabricator.services.mozilla.com/D108500