gfx/layers/PersistentBufferProvider.h
@@ -187,7 +187,6 @@ class PersistentBufferProviderShared : public PersistentBufferProvider,
 
   RefPtr<gfx::DrawTarget> mDrawTarget;
   RefPtr<gfx::SourceSurface> mSnapshot;
-  RefPtr<gfx::SourceSurface> mPreviousSnapshot;
   size_t mMaxAllowedTextures = kMaxTexturesAllowed;
 };
 
